 * crecall() now returns an error when given an invalid channel, and no
   longer returns an error when used on a channel with nothing to recall.
   Suggested by Trinsec. [MG]
 * Added uptime(), which returns much of the information from @uptime.
   From a suggestion by Jules. [MG]
 * quota() now accepts 'me' as an argument. Suggested by Padraic. [MG]
 * remove() is now ANSI-aware. [MG]
   
Fixes:
 * Wildcard matches on ANSI'd strings sometimes failed. Reported by Duckwa
   and Paige. [MG]
 * Bug in matching code when a room tries to locate an exit. Reported by
   Sketch. [MG]
 * Help updates. [MG], [SW]
 * Crash bug in dealing with Pueblo markup. Reported by Mercutio. [SW]
 * Fix some issues in parsing flag/attribute/eval locks. Found by Padraic
   and Jules. [SW]
 * @[out]pageformat could sometimes receive the wrong alias in %2. Reported
   by Padraic. [MG]
 * align() didn't correctly apply ANSI to empty columns. Reported by
   Padraic. [MG]
 * Fix compile warning in player.c when sendmail is not enabled. Reported by
   Padraic. [MG]
 * Fix hardcode bug in ansi_strcmp, which affected the softcode splice()
   function. [MG]
 * @chan/what failed to report when Admin channels also had the Player priv.
   Reported by Padraic. [MG]
 * win32/config.h was lacking a definition for int16_t. Reported by Daniko.
   [SW]
 * DBREFLIST locks required the attrname be given in upper-case. Reported by
   Sketch. [MG]

Version 1.8.4 patchlevel 5                                 Jun 19,  2011

Major Changes:

 * The experimental --enable-ssl_slave option for configure allows
   persistant SSL connections that won't get booted when the mush
   restarts. Requires libevent v2.X. [SW]
 * info_slave, the sub-process used for resolving hostnames, now uses
   libevent if available. [SW]
 * Rewrite of large portions of notify.c. The main public function
   there, notify_anything(), now takes different arguments.
   notify_format() and notify() are unchanged. Should be largely